fixed image stretching, added images to readme

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .rankImage{
+    object-fit:cover;
     height: 50%;
     width: 100%;
 }
